--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,19 @@ services:
     #   - SECRET_key=test
     #   - DEBUG=True
     #   or any other dynamic variable!
+
+  smtp4dev:
+    image: rnwood/smtp4dev:v3
+    restart: always
+    ports:
+      - '5000:80'   # web interface
+      - '25:25'     # SMTP server
+      - '143:143'   # IMAP server
+    volumes:
+      - smtp4dev-data:/smtp4dev
+    environment:
+      - ServerOptions__HostName=smtp4dev
+
+
+volumes:
+  smtp4dev-data:
