--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ DJANGO_DEBUG=True
 GOOGLE_MAPS_API_KEY=replace-with-your-google-maps-key
 RECAPTCHA_SITE_KEY=replace-with-your-recaptcha-site-key
 RECAPTCHA_SECRET_KEY=replace-with-your-recaptcha-secret-key
+SITE_URL=http://127.0.0.1:8000
